--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  background: #d0d0fd;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 40px;
+  height: 50px;
+}
+.nav {
+  display: flex;
+  align-items: center;
+}
+.logo-container {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.logo {
+  width: 45px;
+  height: 45px;
+}
+.nav-options {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 50px;
+  list-style-type: none;
+  margin: unset;
+}
+
+.nav-options li > a {
+  color: black;
+  text-decoration: unset;
+}
+
+.mobile-option {
+  display: none;
+}
+
+.option :hover {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.mobile-menu {
+  display: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.body {
+  text-align: center;
+}
+
+.pic-header {
+  height: 300px;
+  width: 100%;
+}
+
+.article {
+  font-size: xx-large;
+}
+
+.text-box {
+  padding: 0 10vw;
+}
+
+.img-box {
+  padding: 0 10vw;
+}
+.img-box img {
+  width: 300px;
+  height: auto;
+}
+.img-box > * {
+  flex: 0 0 30%;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 648px) {
+  .header {
+    padding: 0px 10px;
   }
-  to {
-    transform: rotate(360deg);
+  .logo {
+    width: 45px;
+    height: 45px;
+  }
+  .nav-options {
+    display: flex;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50px;
+    left: -100%;
+    opacity: 0;
+    transition: all 0.5s ease;
+    flex-direction: column;
+    list-style-type: none;
+    grid-gap: 0px;
+  }
+
+  .nav-options.active {
+    background: #d0d0fd;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+    align-content: center;
+    padding-left: 0px;
+  }
+
+  .menu-icon {
+    width: 30px;
+    height: auto;
+  }
+
+  .option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0px;
+  }
+
+  .mobile-menu {
+    display: flex;
+    align-items: center;
+  }
+
+  .mobile-menu section {
+    display: flex;
+    align-items: center;
   }
 }
